// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r0:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> EmptyStackedOpen story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rr:"
        aria-expanded="true"
        class="accordion-button accordion-button--md accordion-button--empty"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:rq:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
      </button>
      <div
        class="accordion-panel accordion-panel--hidden"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:rr:"
      />
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rt:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:rs:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:rt:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rv:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:ru:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:rv:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r11:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r10:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r11:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> HasLeadingIcon story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r4:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.85 17.1C6.7 16.45 7.65 15.9375 8.7 15.5625C9.75 15.1875 10.85 15 12 15C13.15 15 14.25 15.1875 15.3 15.5625C16.35 15.9375 17.3 16.45 18.15 17.1C18.7333 16.4167 19.1875 15.6417 19.5125 14.775C19.8375 13.9083 20 12.9833 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 12.9833 4.1625 13.9083 4.4875 14.775C4.8125 15.6417 5.26667 16.4167 5.85 17.1ZM12 13C11.0167 13 10.1875 12.6625 9.5125 11.9875C8.8375 11.3125 8.5 10.4833 8.5 9.5C8.5 8.51667 8.8375 7.6875 9.5125 7.0125C10.1875 6.3375 11.0167 6 12 6C12.9833 6 13.8125 6.3375 14.4875 7.0125C15.1625 7.6875 15.5 8.51667 15.5 9.5C15.5 10.4833 15.1625 11.3125 14.4875 11.9875C13.8125 12.6625 12.9833 13 12 13ZM12 22C10.6167 22 9.31667 21.7375 8.1 21.2125C6.88333 20.6875 5.825 19.975 4.925 19.075C4.025 18.175 3.3125 17.1167 2.7875 15.9C2.2625 14.6833 2 13.3833 2 12C2 10.6167 2.2625 9.31667 2.7875 8.1C3.3125 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.3125 8.1 2.7875C9.31667 2.2625 10.6167 2 12 2C13.3833 2 14.6833 2.2625 15.9 2.7875C17.1167 3.3125 18.175 4.025 19.075 4.925C19.975 5.825 20.6875 6.88333 21.2125 8.1C21.7375 9.31667 22 10.6167 22 12C22 13.3833 21.7375 14.6833 21.2125 15.9C20.6875 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6875 15.9 21.2125C14.6833 21.7375 13.3833 22 12 22ZM12 20C12.8833 20 13.7167 19.8708 14.5 19.6125C15.2833 19.3542 16 18.9833 16.65 18.5C16 18.0167 15.2833 17.6458 14.5 17.3875C13.7167 17.1292 12.8833 17 12 17C11.1167 17 10.2833 17.1292 9.5 17.3875C8.71667 17.6458 8 18.0167 7.35 18.5C8 18.9833 8.71667 19.3542 9.5 19.6125C10.2833 19.8708 11.1167 20 12 20ZM12 11C12.4333 11 12.7917 10.8583 13.075 10.575C13.3583 10.2917 13.5 9.93333 13.5 9.5C13.5 9.06667 13.3583 8.70833 13.075 8.425C12.7917 8.14167 12.4333 8 12 8C11.5667 8 11.2083 8.14167 10.925 8.425C10.6417 8.70833 10.5 9.06667 10.5 9.5C10.5 9.93333 10.6417 10.2917 10.925 10.575C11.2083 10.8583 11.5667 11 12 11Z"
            />
          </svg>
        </span>
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subtitle"
          >
            Quam lacus maecenas nibh malesuada.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> HasLeadingNumberIcon story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r6:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subtitle"
          >
            Quam lacus maecenas nibh malesuada.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Small story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r8:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Stacked story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rb:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:ra:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:rb:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:rc:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:re:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:rg:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOpen story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r13:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r12:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r13:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r15:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r14:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r15:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r17:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r16:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r17:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r19:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r18:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r19:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmall story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:rj:"
        aria-expanded="true"
        class="accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-button-1"
        id="headlessui-disclosure-button-:ri:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-panel-1"
        id="headlessui-disclosure-panel-:rj:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-2"
        id="headlessui-disclosure-button-:rk:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-3"
        id="headlessui-disclosure-button-:rm:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--sm"
        data-headlessui-state=""
        data-testid="accordion-button-4"
        id="headlessui-disclosure-button-:ro:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOpen story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1b:"
        aria-expanded="true"
        class="accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r1a:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r1b:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1d:"
        aria-expanded="true"
        class="accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r1c:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r1d:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1f:"
        aria-expanded="true"
        class="accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r1e:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r1f:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1h:"
        aria-expanded="true"
        class="accordion-button accordion-button--sm"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-button-:r1g:"
        type="button"
      >
        <h2
          class="heading heading--body-md accordion-button__heading"
        >
          <span
            class="text text--body-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-disclosure-panel-:r1h:"
      >
        <span
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> TitleAndSubtitle story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r2:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subtitle"
          >
            <span>
              "Quam lacus maecenas nibh malesuada."
            </span>
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r1i:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Accordion Button 
            closed
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> WithLargeHeader story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-96"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r1k:"
        type="button"
      >
        <h2
          class="heading heading--body-lg accordion-button__heading"
        >
          <span
            class="text text--body-lg accordion-button__title"
          >
            Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
